--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/*Author: Mary Agnes Joseph*/
+
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
@@ -10,7 +12,7 @@ body {
 #intro {
     height: 100vh;
     width: 100%;
-    background: url(/img/cover_background.jpg) 50% 0 repeat-y fixed;
+    background: url("img/cover_background.jpg") 50% 0 repeat-y fixed;
     background-size: cover;
     display: flex;
     align-items: center;
@@ -609,7 +611,7 @@ body {
     z-index: -1;
     position: absolute;
     background-repeat-x: no-repeat;
-    background-image: url("/img/pyramid_background.png");
+    background-image: url("img/pyramid_background.png");
 }
 
 #image_right {
@@ -619,7 +621,7 @@ body {
     z-index: -1;
     position: absolute;
     right: 0px;
-    background-image: url("/img/pyramid_background.png");
+    background-image: url("img/pyramid_background.png");
 }
 
 
@@ -642,6 +644,7 @@ body {
 /*doughnut chart*/
 #doughnut {
     margin: 25px;
+    margin-top: 30px;
 }
 
 #donut_intro {
@@ -649,7 +652,7 @@ body {
     text-align: center;
 }
 
-/* Add shadow effect to chart. If you don't like it, get rid of it. */
+/* Add shadow effect to chart.  */
 #doughnut_chart svg {
     filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, .25));
 }
